// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Header Header action buttons with dropdowns 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100vh",
          "width": "100%",
        }
      }
    >
      <header
        aria-label="main header"
        className="bx--header custom-class-name Headerstory__StyledHeader-st8jpc-0 hBPBX"
      >
        <a
          className="bx--skip-to-content"
          href="skip"
          tabIndex="0"
        >
          Skip to main content
        </a>
        <button
          aria-label="Open menu"
          className="bx--header__action bx--header__menu-trigger bx--header__menu-toggle bx--header__menu-toggle__hidden"
          onClick={null}
          title="Open menu"
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 20 20"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="1.2"
              width="16"
              x="2"
              y="14.8"
            />
            <rect
              height="1.2"
              width="16"
              x="2"
              y="11.2"
            />
            <rect
              height="1.2"
              width="16"
              x="2"
              y="7.6"
            />
            <rect
              height="1.2"
              width="16"
              x="2"
              y="4"
            />
          </svg>
        </button>
        <a
          className="bx--header__name"
          href="http://localhost:8989"
        >
          <span
            className="bx--header__name--prefix"
          >
            IBM
          </span>
           
          Watson IoT Platform 
        </a>
        <div
          className="bx--header__global"
        >
          <button
            aria-label="alerts"
            className="bx--header-action-btn bx--header__action"
            type="button"
          >
            <svg
              aria-hidden={true}
              description="Icon"
              fill="white"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28.7,20.3,26,17.6V13A10.07,10.07,0,0,0,17,3V1H15V3A10.15,10.15,0,0,0,6,13v4.6L3.3,20.3A.91.91,0,0,0,3,21v3a.94.94,0,0,0,1,1h7a5,5,0,0,0,10,0h7a.94.94,0,0,0,1-1V21A.91.91,0,0,0,28.7,20.3ZM16,28a3,3,0,0,1-3-3h6A3,3,0,0,1,16,28Zm11-5H5V21.4l2.7-2.7A.91.91,0,0,0,8,18V13a8,8,0,0,1,16,0v5a.91.91,0,0,0,.3.7L27,21.4Z"
              />
            </svg>
          </button>
          <div
            className="bx--header__submenu bx--header-action-btn action-btn__group"
            data-testid="action-btn__group"
            onBlur={[Function]}
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup="menu"
              aria-label="help"
              className="bx--header-action-btn action-btn__trigger bx--header__action"
              onClick={[Function]}
              title="help"
              type="button"
            >
              <svg
                aria-hidden={true}
                className="bx--header__menu-item bx--header__menu-title"
                description="Icon"
                fill="white"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                />
                <circle
                  cx="16"
                  cy="23.5"
                  r="1.5"
                />
                <path
                  d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"
                />
              </svg>
            </button>
            <div
              aria-label="Header Panel"
              className="bx--header-panel action-btn__headerpanel action-btn__headerpanel--closed"
              data-testid="action-btn__panel"
              tabIndex="-1"
            >
              <ul
                aria-label="help"
              >
                <li
                  className="action-btn__headerpanel-li"
                >
                  <a
                    element="a"
                    href="http://google.com"
                    rel="noopener noreferrer"
                    target="_blank"
                    title="this is a title"
                  >
                    this is my message to you
                  </a>
                </li>
                <li
                  className="action-btn__headerpanel-li"
                >
                  <button
                    className="this"
                    element="button"
                    onClick={[Function]}
                  >
                    <span>
                      JohnDoe@ibm.com
                      <svg
                        aria-hidden={true}
                        description="Icon"
                        fill="white"
                        focusable="false"
                        height={20}
                        preserveAspectRatio="xMidYMid meet"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        viewBox="0 0 32 32"
                        width={20}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2ZM10,26.38v-2A3.22,3.22,0,0,1,13,21h6a3.22,3.22,0,0,1,3,3.39v2a11.92,11.92,0,0,1-12,0Zm14-1.46v-.61A5.21,5.21,0,0,0,19,19H13a5.2,5.2,0,0,0-5,5.31s0,0,0,0v.59a12,12,0,1,1,16,0Z"
                        />
                        <path
                          d="M16,7a5,5,0,1,0,5,5A5,5,0,0,0,16,7Zm0,8a3,3,0,1,1,3-3A3,3,0,0,1,16,15Z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="bx--header__submenu bx--header-action-btn action-btn__group"
            data-testid="action-btn__group"
            onBlur={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="bx--header__submenu bx--header-action-btn"
            >
              <a
                aria-expanded={false}
                aria-haspopup="menu"
                aria-label="user"
                className="bx--header__menu-item bx--header__menu-title"
                data-testid="menuitem"
                href=""
                onClick={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  description="Icon"
                  fill="white"
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2ZM10,26.38v-2A3.22,3.22,0,0,1,13,21h6a3.22,3.22,0,0,1,3,3.39v2a11.92,11.92,0,0,1-12,0Zm14-1.46v-.61A5.21,5.21,0,0,0,19,19H13a5.2,5.2,0,0,0-5,5.31s0,0,0,0v.59a12,12,0,1,1,16,0Z"
                  />
                  <path
                    d="M16,7a5,5,0,1,0,5,5A5,5,0,0,0,16,7Zm0,8a3,3,0,1,1,3-3A3,3,0,0,1,16,15Z"
                  />
                </svg>
              </a>
              <ul
                aria-label="user"
                className="bx--header__menu"
                role="menu"
              >
                <li>
                  <a
                    className="bx--header__menu-item"
                    href="http://google.com"
                    rel="noopener noreferrer"
                    tabIndex={0}
                    target="_blank"
                    title="this is a title"
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      this is my message to you
                    </span>
                  </a>
                </li>
                <li
                  className="this"
                >
                  <button
                    className="bx--header__menu-item"
                    onClick={[Function]}
                    tabIndex={0}
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      <span>
                        JohnDoe@ibm.com
                        <svg
                          aria-hidden={true}
                          description="Icon"
                          fill="white"
                          focusable="false"
                          height={20}
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 32 32"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2ZM10,26.38v-2A3.22,3.22,0,0,1,13,21h6a3.22,3.22,0,0,1,3,3.39v2a11.92,11.92,0,0,1-12,0Zm14-1.46v-.61A5.21,5.21,0,0,0,19,19H13a5.2,5.2,0,0,0-5,5.31s0,0,0,0v.59a12,12,0,1,1,16,0Z"
                          />
                          <path
                            d="M16,7a5,5,0,1,0,5,5A5,5,0,0,0,16,7Zm0,8a3,3,0,1,1,3-3A3,3,0,0,1,16,15Z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="bx--header__submenu bx--header-action-btn action-btn__group"
            data-testid="action-btn__group"
            onBlur={[Function]}
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup="menu"
              aria-label="AppSwitcher"
              className="bx--header-action-btn action-btn__trigger bx--header__action"
              onClick={[Function]}
              title="AppSwitcher"
              type="button"
            >
              <svg
                aria-hidden={true}
                className="bx--header__menu-item bx--header__menu-title"
                description="Icon"
                fill="white"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="4"
                  width="4"
                  x="14"
                  y="4"
                />
                <rect
                  height="4"
                  width="4"
                  x="4"
                  y="4"
                />
                <rect
                  height="4"
                  width="4"
                  x="24"
                  y="4"
                />
                <rect
                  height="4"
                  width="4"
                  x="14"
                  y="14"
                />
                <rect
                  height="4"
                  width="4"
                  x="4"
                  y="14"
                />
                <rect
                  height="4"
                  width="4"
                  x="24"
                  y="14"
                />
                <rect
                  height="4"
                  width="4"
                  x="14"
                  y="24"
                />
                <rect
                  height="4"
                  width="4"
                  x="4"
                  y="24"
                />
                <rect
                  height="4"
                  width="4"
                  x="24"
                  y="24"
                />
              </svg>
            </button>
            <div
              aria-label="Header Panel"
              className="bx--header-panel bx--app-switcher"
              data-testid="action-btn__panel"
              tabIndex="-1"
            >
              <ul
                aria-label="AppSwitcher"
              >
                <li
                  className="action-btn__headerpanel-li"
                >
                  <a
                    className="bx--app-switcher header-panel"
                    element="a"
                  >
                    <a
                      href="#"
                    >
                      Header panel content
                    </a>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </header>
      <div
        id="skip"
      />
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Header Header no submenu 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <header
      aria-label="main header"
      className="bx--header custom-class-name Headerstory__StyledHeader-st8jpc-0 hBPBX"
    >
      <a
        className="bx--skip-to-content"
        href="skip"
        tabIndex="0"
      >
        Skip to main content
      </a>
      <button
        aria-label="Open menu"
        className="bx--header__action bx--header__menu-trigger bx--header__menu-toggle bx--header__menu-toggle__hidden"
        onClick={null}
        title="Open menu"
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable="false"
          height={20}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="1.2"
            width="16"
            x="2"
            y="14.8"
          />
          <rect
            height="1.2"
            width="16"
            x="2"
            y="11.2"
          />
          <rect
            height="1.2"
            width="16"
            x="2"
            y="7.6"
          />
          <rect
            height="1.2"
            width="16"
            x="2"
            y="4"
          />
        </svg>
      </button>
      <a
        className="bx--header__name"
        href="http://localhost:8989"
      >
        <span
          className="bx--header__name--prefix"
        >
          IBM
        </span>
         
        Watson IoT Platform 
      </a>
      <div
        className="bx--header__global"
      >
        <button
          aria-label="user"
          className="bx--header-action-btn bx--header__action"
          type="button"
        >
          <svg
            aria-hidden={true}
            description="Icon"
            fill="white"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "willChange": "transform",
              }
            }
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2ZM10,26.38v-2A3.22,3.22,0,0,1,13,21h6a3.22,3.22,0,0,1,3,3.39v2a11.92,11.92,0,0,1-12,0Zm14-1.46v-.61A5.21,5.21,0,0,0,19,19H13a5.2,5.2,0,0,0-5,5.31s0,0,0,0v.59a12,12,0,1,1,16,0Z"
            />
            <path
              d="M16,7a5,5,0,1,0,5,5A5,5,0,0,0,16,7Zm0,8a3,3,0,1,1,3-3A3,3,0,0,1,16,15Z"
            />
          </svg>
        </button>
      </div>
    </header>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Header header submenu 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100vh",
          "width": "100%",
        }
      }
    >
      <header
        aria-label="main header"
        className="bx--header custom-class-name Headerstory__StyledHeader-st8jpc-0 hBPBX"
      >
        <a
          className="bx--skip-to-content"
          href="skip"
          tabIndex="0"
        >
          Skip to main content
        </a>
        <button
          aria-label="Open menu"
          className="bx--header__action bx--header__menu-trigger bx--header__menu-toggle bx--header__menu-toggle__hidden"
          onClick={null}
          title="Open menu"
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 20 20"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="1.2"
              width="16"
              x="2"
              y="14.8"
            />
            <rect
              height="1.2"
              width="16"
              x="2"
              y="11.2"
            />
            <rect
              height="1.2"
              width="16"
              x="2"
              y="7.6"
            />
            <rect
              height="1.2"
              width="16"
              x="2"
              y="4"
            />
          </svg>
        </button>
        <a
          className="bx--header__name"
          href="http://localhost:8989"
        >
          <span
            className="bx--header__name--prefix"
          >
            IBM
          </span>
           
          Watson IoT Platform 
        </a>
        <div
          className="bx--header__global"
        >
          <div
            className="bx--header__submenu bx--header-action-btn action-btn__group"
            data-testid="action-btn__group"
            onBlur={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="bx--header__submenu bx--header-action-btn"
            >
              <a
                aria-expanded={false}
                aria-haspopup="menu"
                aria-label="user"
                className="bx--header__menu-item bx--header__menu-title"
                data-testid="menuitem"
                href=""
                onClick={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  description="Icon"
                  fill="white"
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2ZM10,26.38v-2A3.22,3.22,0,0,1,13,21h6a3.22,3.22,0,0,1,3,3.39v2a11.92,11.92,0,0,1-12,0Zm14-1.46v-.61A5.21,5.21,0,0,0,19,19H13a5.2,5.2,0,0,0-5,5.31s0,0,0,0v.59a12,12,0,1,1,16,0Z"
                  />
                  <path
                    d="M16,7a5,5,0,1,0,5,5A5,5,0,0,0,16,7Zm0,8a3,3,0,1,1,3-3A3,3,0,0,1,16,15Z"
                  />
                </svg>
              </a>
              <ul
                aria-label="user"
                className="bx--header__menu"
                role="menu"
              >
                <li>
                  <a
                    className="bx--header__menu-item"
                    href="http://google.com"
                    rel="noopener noreferrer"
                    tabIndex={0}
                    target="_blank"
                    title="this is a title"
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      this is my message to you
                    </span>
                  </a>
                </li>
                <li
                  className="this"
                >
                  <button
                    className="bx--header__menu-item"
                    onClick={[Function]}
                    tabIndex={0}
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      <span>
                        JohnDoe@ibm.com
                        <svg
                          aria-hidden={true}
                          description="Icon"
                          fill="white"
                          focusable="false"
                          height={20}
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 32 32"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2ZM10,26.38v-2A3.22,3.22,0,0,1,13,21h6a3.22,3.22,0,0,1,3,3.39v2a11.92,11.92,0,0,1-12,0Zm14-1.46v-.61A5.21,5.21,0,0,0,19,19H13a5.2,5.2,0,0,0-5,5.31s0,0,0,0v.59a12,12,0,1,1,16,0Z"
                          />
                          <path
                            d="M16,7a5,5,0,1,0,5,5A5,5,0,0,0,16,7Zm0,8a3,3,0,1,1,3-3A3,3,0,0,1,16,15Z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </header>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
